[completed:95] preloading pressed button image to prevent flickering upon image reload

--- a/EatSenseRestWS/src/main/app/dev/res/css/app-default.css
+++ b/EatSenseRestWS/src/main/app/dev/res/css/app-default.css
@@ -7142,18 +7142,15 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .orderListItem h2.title {
-  /*float: left;*/
   color: #000000;
   font-size: 1em;
-  /*width: 75%;*/
+  padding-right: 3px;
 }
 
 .orderListItem h2.price {
-  /*float: left;*/
   color: #000000;
   font-size: 1em;
   white-space: nowrap;
-  /*width: 25%;*/
   text-align: right;
   padding-right: 25px;
 }
